# irrlicht_redo

./: CMakeLists.txt  README.md  config
src/: BasicIncludes.h  CMakeLists.txt  ExtBasicIncludes.h  FilesystemVersions.h  Logging.h  OpenGLIncludes.h  SDL_logging.h  Typedefs.h  Types.h
src/Android/: CAndroidAssetFileArchive.cpp  CAndroidAssetFileArchive.h  CAndroidAssetReader.cpp  CAndroidAssetReader.h  CIrrDeviceAndroid.cpp  CIrrDeviceAndroid.h  CKeyEventWrapper.cpp  CKeyEventWrapper.h
src/Core/: CursorControl.cpp  CursorControl.h  Events.h  GLVersionSpecific.cpp  GLVersionSpecific.h  IEventReceiver.h  Keycodes.cpp  Keycodes.h  LogStream.cpp  LogStream.h  MainWindow.cpp  MainWindow.h  TimeCounter.h
src/Device/: CAttributeImpl.h  CAttributes.cpp  CAttributes.h  CEGLManager.cpp  CEGLManager.h  CGLXManager.cpp  CGLXManager.h  CIrrDeviceLinux.cpp  CIrrDeviceLinux.h  CIrrDeviceOSX.h  CIrrDeviceOSX.mm  CIrrDeviceSDL.cpp  CIrrDeviceSDL.h  CIrrDeviceStub.cpp  CIrrDeviceStub.h  CIrrDeviceWin32.cpp  CIrrDeviceWin32.h  CLogger.cpp  CLogger.h  CNSOGLManager.h  CNSOGLManager.mm  COSOperator.cpp  COSOperator.h  CSDLManager.cpp  CSDLManager.h  CTimer.h  CWGLManager.cpp  CWGLManager.h  Clipboard.cpp  CursorControl.cpp  CursorControl.h  IAttribute.h  Irrlicht.cpp  Logger.cpp  SDLDevice.cpp  SDLDevice.h  Timer.cpp  byteswap.cpp  byteswap.h  globals.cpp  (+2 more)
src/GUI/: Button.cpp  CGUIButton.cpp  CGUIButton.h  CGUICheckBox.cpp  CGUICheckBox.h  CGUIComboBox.cpp  CGUIComboBox.h  CGUIEditBox.cpp  CGUIEditBox.h  CGUIEnvironment.cpp  CGUIEnvironment.h  CGUIFileOpenDialog.cpp  CGUIFileOpenDialog.h  CGUIFont.cpp  CGUIFont.h  CGUIImage.cpp  CGUIImage.h  CGUIImageList.cpp  CGUIImageList.h  CGUIListBox.cpp  CGUIListBox.h  CGUIScrollBar.cpp  CGUIScrollBar.h  CGUISkin.cpp  CGUISkin.h  CGUISpriteBank.cpp  CGUISpriteBank.h  CGUIStaticText.cpp  CGUIStaticText.h  CGUITabControl.cpp  CGUITabControl.h  CheckBox.cpp  ComboBox.cpp  EditBox.cpp  Environment.cpp  FileOpenDialog.cpp  Font.cpp  Image.cpp  ImageList.cpp  ListBox.cpp  (+5 more)
src/IO/: CFileList.cpp  CFileList.h  CFileSystem.cpp  CFileSystem.h  CLimitReadFile.cpp  CLimitReadFile.h  CMemoryFile.cpp  CMemoryFile.h  CReadFile.cpp  CReadFile.h  CWriteFile.cpp  CWriteFile.h  CZipReader.cpp  CZipReader.h
src/Image/: BlendModes.cpp  BlendModes.h  CBlit.h  CColorConverter.cpp  CColorConverter.h  CImage.cpp  CImage.h  CImageLoaderBMP.cpp  CImageLoaderBMP.h  CImageLoaderJPG.cpp  CImageLoaderJPG.h  CImageLoaderPNG.cpp  CImageLoaderPNG.h  CImageLoaderTGA.cpp  CImageLoaderTGA.h  CImageWriterJPG.cpp  CImageWriterJPG.h  CImageWriterPNG.cpp  CImageWriterPNG.h  Color.cpp  Color.h  Converting.cpp  Converting.h  Image.cpp  Image.h  ImageFilters.cpp  ImageFilters.h  ImageFormats.cpp  ImageFormats.h  ImageLoader.cpp  ImageLoader.h  ImageModifier.cpp  ImageModifier.h  PixelFormats.cpp  PixelFormats.h  ResizeFilters.cpp  ResizeFilters.h  SoftwareDriver2_helper.h
src/Main/: CursorControl.cpp  CursorControl.h  Events.h  GLVersionSpecific.cpp  GLVersionSpecific.h  IEventReceiver.h  Keycodes.cpp  Keycodes.h  LogStream.cpp  LogStream.h  Logger.h  MainWindow.cpp  MainWindow.h  Stopwatch.h  TimeCounter.h
src/Mesh/: CB3DMeshFileLoader.cpp  CB3DMeshFileLoader.h  CGLTFMeshFileLoader.cpp  CGLTFMeshFileLoader.h  CMeshCache.cpp  CMeshCache.h  CMeshManipulator.cpp  CMeshManipulator.h  COBJMeshFileLoader.cpp  COBJMeshFileLoader.h  CSkinnedMesh.cpp  CSkinnedMesh.h  CXMeshFileLoader.cpp  CXMeshFileLoader.h  MeshManipulator.cpp  SB3DStructs.h  SkinnedMesh.cpp  VertexIndex.cpp  VertexTypes.cpp
src/Misc/: CIrrDeviceLinux.cpp  CIrrDeviceOSX.mm  CIrrDeviceSDL.cpp  CIrrDeviceWin32.cpp  Irrlicht.cpp
src/Render/: COpenGLCoreCacheHandler.h  Common.cpp  Common.h  DrawContext.cpp  DrawContext.h  FrameBuffer.cpp  FrameBuffer.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  StreamTexture2D.cpp  StreamTexture2D.h  TTFont.cpp  TTFont.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  TextureCubeMap.cpp  TextureCubeMap.h  UniformBuffer.cpp  UniformBuffer.h  VertexTypeDescriptor.cpp  VertexTypeDescriptor.h  opengl_types.h  toGLEnum.cpp  toGLEnum.h
src/Render/OpenGL/: ExtensionHandler.cpp
src/Render/OpenGL3/: Driver.cpp
src/Scene/: CAnimatedMeshSceneNode.cpp  CAnimatedMeshSceneNode.h  CBillboardSceneNode.cpp  CBillboardSceneNode.h  CBoneSceneNode.cpp  CBoneSceneNode.h  CCameraSceneNode.cpp  CCameraSceneNode.h  CDummyTransformationSceneNode.cpp  CDummyTransformationSceneNode.h  CEmptySceneNode.cpp  CEmptySceneNode.h  CMeshSceneNode.cpp  CMeshSceneNode.h  CSceneCollisionManager.cpp  CSceneCollisionManager.h  CSceneManager.cpp  CSceneManager.h
src/Utils/: AABB.h  Bitmap.cpp  Bitmap.h  ByteArray.cpp  ByteArray.h  Line2D.h  Line3D.h  Logger.h  MathFuncs.h  Matrix4.cpp  Matrix4.h  Matrix4.tpp  Plane3D.h  Printing.h  Quaternion.cpp  Quaternion.h  Rect.h  String.cpp  String.h  Timer.h  TypeConverter.cpp  TypeConverter.h  TypeSize.cpp  TypeSize.h  Typedefs.h  Vector2D.h  Vector3D.h  plane3d.h  typedefs.h
src/Video/: CFPSCounter.cpp  CFPSCounter.h  CNSOGLManager.mm  CNullDriver.cpp  CNullDriver.h  COGLESCommon.h  COGLESCoreExtensionHandler.h  COGLESDriver.cpp  COGLESDriver.h  COGLESExtensionHandler.cpp  COGLESExtensionHandler.h  COGLESMaterialRenderer.h  COpenGLCacheHandler.cpp  COpenGLCacheHandler.h  COpenGLCommon.h  COpenGLCoreCacheHandler.h  COpenGLCoreFeature.h  COpenGLCoreRenderTarget.h  COpenGLCoreTexture.h  COpenGLDriver.cpp  COpenGLDriver.h  COpenGLExtensionHandler.cpp  COpenGLExtensionHandler.h  COpenGLMaterialRenderer.h  COpenGLSLMaterialRenderer.cpp  COpenGLSLMaterialRenderer.h  Color.h  ColorFormats.cpp  ColorFormats.h  Common.h  DrawContext.cpp  Drawer.cpp  Drawer.h  Driver.cpp  Driver.h  ExtensionHandler.cpp  ExtensionHandler.h  FixedPipelineRenderer.cpp  FixedPipelineRenderer.h  GLSpecificInfo.cpp  (+31 more)
src/Video/OpenGL/: Common.h  Driver.cpp  Driver.h  ExtensionHandler.cpp  ExtensionHandler.h  FixedPipelineRenderer.cpp  FixedPipelineRenderer.h  MaterialRenderer.cpp  MaterialRenderer.h  Renderer2D.cpp  Renderer2D.h  VBO.cpp
src/Video/OpenGL3/: Driver.cpp  Driver.h  DriverGL3.cpp  DriverGL3.h
(+267 files in other folders)
